fix text-align

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -27,6 +27,12 @@
   img{
     border-radius: 20px;
   }
+  p {
+    font-size: 0.7em;
+    text-decoration: none;
+    word-wrap: break-word;
+    text-align: left;
+  }
 }
 
 .card-text {
@@ -34,8 +40,7 @@
     font-size: 0.7em;
     text-decoration: none;
     word-wrap: break-word;
-    word-break: break-all;
-    // text-align: justify;
+    text-align: left;
   }
 }
 
